Fix misaligned placeholder text

--- a/app/assets/stylesheets/pages/new_account_page.css.scss
+++ b/app/assets/stylesheets/pages/new_account_page.css.scss
@@ -6,9 +6,11 @@
   input[type="email"],
   input[type="text"],
   input[type="password"] {
-    padding-top:    8px;
-    padding-bottom: 8px;
+    padding-top:    0px;
+    padding-bottom: 0px;
     width: 240px;
+    line-height: 40px;
+    height: 40px;
   }
 
   .new-account-field-group {
